--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,14 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# DS_Store files
+.DS_Store
+
+# allows putting configs in a separate directory named 'configs'
 configs/
 
+# allows putting outputs in a separate directory named 'outputs'
 outputs/
 
+# ignores all output and config files
 *.json
